--- a/style.css
+++ b/style.css
@@ -43,19 +43,9 @@ hr {
   background-color: #ee4b08;
   border-color: #ee4b08;
   border-width: 4px;
+  transition: 0.3s border-width;
 }
 
 .btn-xl{
   padding: 1rem 2rem;
-}
-
-
-
-
-hr {
-    margin: 20px auto;
-    color: #F05F44;
-    border: 3px solid #F05F44;
-    max-width: 65px;
-    opacity: 1;  
 }
